# mental-gym

./: .gitignore  Manifest.toml  Project.toml  README.md  pyproject.toml
.github/scripts/: README.md  update_stats.py
.github/workflows/: test.yml  update-stats.yml
notebooks/: scratchpad.ipynb
src/boilerplate/: backtracking.py  docstring_boilerplate.jl  kadane.py  linked_list_patterns.py  prefix_sum.py  sliding_window_fixed.py  sliding_window_variable.py  two_pointers_variations.md  two_pointers_variations.py
src/codewars/: package-lock.json  package.json
src/kattis/: bidendalausbid.py  different.jl  ferskastajarmid.py  fleytitala.py  framvindustika.py  fyrirtaekjanafn.py  hlaupafmaeli.py  inflation2.py  leidangur.py  lidaskipting2.py  message.py  racing_game.py  rice_judge.py  sannvirdi.py  storafmaeli.py  subaruba.py  taktsvedjur.py
src/leetcode/: CloseDuplicates.jl  GetConcatenation.jl  LongestConsecutive.jl  MaxArea.jl  MinWindow.jl  ValidParenthesis.jl  ValidSudoku.jl  eval_rpn.py  generate_parenthesis.py  groupAnagrams.jl  isAnagram.jl  isPalindrome.jl  is_anagram.py  permutation_in_string.py  threeSum.jl  trap.jl  trap.py  twoSum.jl  two_sum.py
tests/kattis/: test_bidendalausbid.py  test_fleytitala.py  test_framvindustika.py  test_fyrirtaekjanafn.py  test_hip_hip.py  test_hlaupafmaeli.py  test_lidaskipting2.py  test_message.py  test_peningar.py  test_storafmaeli.py
tests/leetcode/: testCharacterReplacement.jl  testCloseDuplicates.jl  testContainsDuplicate.jl  testEncodeDecodeString.jl  testGroupAnagrams.jl  testIsAnagram.jl  testIsPalindrome.jl  (+7 more)
(+127 files in other folders)
